--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:              Clean Blog
 email:              your-email@example.com
 description:        A Blog Theme by Start Bootstrap
 author:             Start Bootstrap
-baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://startbootstrap.github.io"
+baseurl:            "/BigDataEnthusiast"
+url:                "https://shobhit-singh.github.io"
 
 # Social Profiles
 twitter_username:   SBootstrap
