--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:              Clean Blog
-email:              your-email@example.com
+title:              BigDataEnthusiast
+email:              blog.bigdataenthusiast@gmail.com
 description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
+author:             shobhit
 baseurl:            "/BigDataEnthusiast"
 url:                "https://shobhit-singh.github.io"
 
