--- a/_config.yml
+++ b/_config.yml
@@ -6,18 +6,17 @@ baseurl:            "/BigDataEnthusiast"
 url:                "https://shobhit-singh.github.io"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
-instagram_username:  
-linkedin_username:
+twitter_username:   shobhitsinghin
+github_username:    shobhit-singh
+instagram_username: shobhitsingh90 
+linkedin_username:  shobhitsinghin
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
 
 # Build settings
 markdown:           kramdown
-paginate:           5
+paginate:           6
 paginate_path:      "/posts/page:num/"
 plugins:
   - jekyll-feed
