--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ url:                "https://shobhit-singh.github.io"
 # Social Profiles
 twitter_username:   shobhitsinghin
 github_username:    shobhit-singh
-instagram_username: shobhitsingh90 
-linkedin_username:  shobhitsinghin
+#instagram_username: shobhitsingh90 
+#linkedin_username:  shobhitsinghin
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
